--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+	font-size: 16px;
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+	--mainFont: "Stint Ultra Condensed";
+	--titleFont: "Roboto Condensed";
+}
