--- a/client/src/Css/ActivityFilter.module.css
+++ b/client/src/Css/ActivityFilter.module.css
@@ -2,7 +2,11 @@
 	display: none;
 }
 
-#titleContainer {
+#titleContinent {
+    display: none;
+}
+
+#titleContainer{
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
@@ -10,7 +14,20 @@
 	width: 50%;
 	height: 35px;
 	position: relative;
+    top: -35px;
 	left: 50%;
+	transition: 0.4s;
+}
+
+#titleContainerContinent{
+    display: flex;
+	align-items: center;
+	justify-content: space-around;
+	font-family: var(--titleFont);
+	width: 50%;
+	height: 35px;
+	position: relative;
+	left: 0;
 	transition: 0.4s;
 }
 
@@ -23,16 +40,38 @@
     transition: background-color 0.4s;
 }
 
+#contentContainerContinent {
+    display: none;
+    transition: background-color 0.4s;
+}
+
 #contentContainer fieldset{
+    border: 1px solid darkgray;
+}
+
+#contentContainerContinent fieldset{
     border: 1px solid darkgray;
 }
 
 #title:checked ~ #contentContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 35px 1fr;
+    grid-template-rows: 50px 1fr;
     background-color: rgba(241, 239, 238, 0.5);
     color: black;
+    position: relative;
+    top: -35px;
+}
+
+#titleContinent:checked ~ #contentContainerContinent {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(241, 239, 238, 0.5);
+    color: black;
+    position: relative;
+    top: -35px;
+    left: 0;
+    width: 50%;
 }
 
 #searchInput{
@@ -67,10 +106,23 @@
     justify-content: center;
 }
 
+#continents{
+    display: flex;
+    flex-direction: column;
+}
+
 #title:checked ~ #titleContainer #icon {
 	transform: rotate(180deg);
 }
 
 #title:checked + #titleContainer {
+	background-color: rgba(241, 239, 238, 0.5);
+}
+
+#titleContinent:checked ~ #titleContainerContinent #icon {
+	transform: rotate(180deg);
+}
+
+#titleContinent:checked + #titleContainerContinent {
 	background-color: rgba(241, 239, 238, 0.5);
 }
