--- a/client/src/Css/Filters.module.css
+++ b/client/src/Css/Filters.module.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     border-bottom: 1px solid #ededed;
+    border-top: 1px solid #ededed;
 }
 
 #orderBy{
