--- a/client/src/Css/countryDetail.module.css
+++ b/client/src/Css/countryDetail.module.css
@@ -17,6 +17,7 @@
 #header img{
     width: 300px;
     height: 150px;
+    border: 1px solid black;
 }
 
 .container{
@@ -32,4 +33,10 @@
     margin: 10px;
     border-color: #7a7a7a;
     border-radius: 20px;
+}
+
+#activityContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
